@@ -55,6 +55,9 @@ int gtkkeyboard_release_all( GtkWidget *widget, GdkEvent *event,
  * Statusbar routines (statusbar.c)
  */
 
+/* Is the disk motor running? */
+extern GtkWidget *gtkstatusbar_disk;
+
 /* Is the tape running? */
 extern GtkWidget *gtkstatusbar_tape;
 
